--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -39,7 +39,7 @@
 
     <p class="bottommenu">
       ${text_with_links(_("Use of this site constitutes acceptance of our %(user_agreement)s and %(privacy_policy)s"), nocname=True, user_agreement= (_("User Agreement {Genitive}"), "http://reddit.com/help/useragreement"), privacy_policy = (_("Privacy Policy {Genitive}"), "http://reddit.com/help/privacypolicy"))}.  
-      ${_("(c) %(year)d CondeNet, Inc. All rights reserved.") % \
+      ${_("(c) %(year)d Conde Nast Digital. All rights reserved.") % \
       dict(year=datetime.datetime.now().timetuple()[0])}
     </p>
    %if g.tracker_url and thing.site_tracking:
