--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -285,7 +285,7 @@ thing id-${what._fullname}
   </form>
 </%def>
 
-<%def name="simple_button(name, title, nameFunc)">
+<%def name="simple_button(title, nameFunc)">
  <a class="" href="javascript:void(0)" 
     onclick="return ${nameFunc}(this)">${title}</a>
 </%def>
