--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -69,7 +69,7 @@
    else:
        action = "/post/unlogged_options" 
    if not c.frameless_cname:
-       action = add_sr(action, nocname=True)
+       action = add_sr(action, sr_path = False, nocname=True)
  %>
 <form action="${action}" method="post" class="pretty-form short-text">
   <input type="hidden" name="uh" value="${c.modhash}" />
