--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -76,7 +76,7 @@
     <div class="popup">
       <%include file="prefoptions.html" />
       <div style="text-align:center; clear:both;">
-        <a href="#" onclick="return hidecover('langcover','langpopup')">
+        <a href="#" onclick="return hidecover(this)">
           ${_("close this window")}
         </a>
       </div>
