--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -151,7 +151,7 @@ ${unsafe(txt)}
 
 
 <%def name="language_tool(name='lang', allow_blank = False, 
-                          default_lang = 'en',
+                          default_lang = g.lang,
                           show_regions = False, 
                           all_langs = False)">
 <% 
