--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -26,6 +26,7 @@
  %>
 
 <%inherit  file="printable.html"/>
+<%namespace file="utils.html" import="plain_link" />
  
 <%def name="numcol()">
   <% num = thing.num %>
@@ -81,18 +82,8 @@
 </%def>
 
 <%def name="subreddit()" buffered="True">
-  <%
-    if c.cname:
-       path = "http://" + get_domain(cname = (c.site == thing.subreddit), 
-                                     subreddit = (c.site != thing.subreddit))
-    else:
-       path = thing.subreddit.path
-    endif
-  %>
-  <a href="${path}" class="subreddit hover" 
-     ${'target="_top"'  if c.cname else ''} >
-    ${thing.subreddit.name}
-  </a>
+  ${plain_link(thing.subreddit.name, thing.subreddit_path, sr_path = False,
+               cname = False, _class = "subreddit hover")}
   <script type="text/javascript">
     reddit.sr['${thing._fullname}'] = '${thing.subreddit._fullname}';
   </script>
@@ -115,8 +106,8 @@
 
 <%def name="domain()">
   <span class="domain">
-    (<a href="/domain/${thing.domain}">${thing.domain}</a>)
-  </span> 
+    (${plain_link(thing.domain, thing.domain_path, _sr_path = False)})
+  </span>
 </%def>
 
 <%def name="tagline()">
