--- a/r2/r2/templates/frame.html
+++ b/r2/r2/templates/frame.html
@@ -21,6 +21,8 @@
 ################################################################################
 <%
    from r2.lib.template_helpers import add_sr
+   from r2.lib.utils import query_string
+   from r2.lib.filters import _force_unicode
  %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/html4/frameset.dtd">
@@ -28,8 +30,36 @@
   <head>
     <title>${thing.title}</title>
   </head>
-  <frameset framespacing="0" rows="30px, 100%">
-    <frame frameborder="0" scrolling="no" src="${add_sr('/toolbar?id=' + thing.fullname)}"/>
-    <frame frameborder="0" src="${thing.url}"/>
+  <frameset framespacing="0" frameborder="0" border="0" rows="20px, 100%">
+    %if thing.fullname:
+      <frame frameborder="0" border="0" scrolling="no" name="reddit_top"
+       noresize="1" src="${add_sr('/toolbar/toolbar?id=' + thing.fullname)}"
+      />
+     <frame frameborder="0" border="0"
+            src="${add_sr('/toolbar/inner?id='+thing.fullname)}" name="inner_toolbar" />
+    %else:
+      <frame frameborder="0" border="0" scrolling="no" name="reddit_top"
+       src="${add_sr('/toolbar/toolbar' +
+                     query_string(dict(url = thing.url,
+                                       title = _force_unicode(thing.title))))}"
+      />
+      <frame frameborder="0" border="0"
+             src="${thing.url}" name="inner_toolbar" />
+    %endif
   </frameset>
+
+   <!-- Internet Explorer has a "feature" called "friendly error
+        messages" that defaults to being turned on, where it detects
+        certain remote error conditions (among them, 404s) such that
+        the response (presumably an error descriptor page) is less
+        than some size (512 bytes for 404s). If that happens, it
+        replaces the remote error message with a more "friendly"
+        description of the error, which obscures the server's error
+        message. Historically, this is because Apache's and IIS's
+        error messages are famously non-helpful, and were less than
+        that minimum size. This unnecessarily verbose comment serves
+        only to cause this page (whose status code may be a 404, set
+        in toolbar.py:GET_s) to go over that minimum size, so that we
+        can force our content to be shown to IE users with "friendly
+        error messages", even on braindead browsers. -->
 </html>
