--- a/r2/r2/templates/bookmarklets.html
+++ b/r2/r2/templates/bookmarklets.html
@@ -24,37 +24,37 @@
 
 <div class="instructions">
   <script type="text/javascript">
-    function dragme() {window.alert("drag this link to your toolbar")};function favme() {window.alert('right-click this link and choose "Add to Favorites"')}
+    function dragme() {window.alert("drag this link to your bookmark bar")};function favme() {window.alert('right-click this link and choose "Add to Favorites"')}
   </script>
   <h1>
     ${_("install the %(site)s bookmarklet set") % dict(site=c.site.name)}
   </h1>
-  <p>${_("once added to your toolbar, these buttons will let you \"reddit this\" (submit the link, or if it's already been submitted, share it and/or comment on it), like, dislike, and save links while you surf.")}</p>
+  <p>${_("once added to your bookmark bar, you can click these buttons from any site to get quick access to reddit functionality.")}</p>
   <h2>${_("in Firefox")}</h2>
   <p>
-    Try out our new firefox add-on, &#32;<a href="/socialite">Socialite</a>.
-  </p>
-  <p>
-    or ${_("click and drag")}&nbsp;
+    ${_("click and drag")}&nbsp;
     %for type in thing.buttons:
     <a style="padding: 0 3px 0 3px" href="${dockletStr(type, 'firefox')}" onclick="dragme(); return false">
-      <img alt="${type}" src="/static/${type}_firefox.png" />
+      <span class="bookmarklet">${type}</span>&nbsp;
     </a>
     %endfor
-    ${_("to your toolbar.")}
+    ${_("to your bookmark bar.")}
   </p>
   <p>
     <img border="0" src="/static/firefox.png" alt="firefox screenshot" />
+  </p>
+  <p>
+    See also our Firefox add-on, &#32;<a href="/socialite">Socialite</a>.
   </p>
   <h2>${_("in Internet Explorer")}</h2>
   <p>
     ${_("right-click on")}&nbsp;
     %for type in thing.buttons:
     <a style="padding: 0 3px 0 3px" href="${dockletStr(type, 'ie')|}" onclick="favme(); return false">
-      <img alt="${type}" src="/static/${type}_ie.png" />
+      <span class="bookmarklet">${type}</span>&nbsp;
     </a>
     %endfor
-    ${_('choose "Add to Favorites" and add to the "Links" folder.')}
+    ${_('then choose "Add to Favorites" and add to the "Links" folder.')}
   </p>
   <p>
     <img border="0" src="/static/ie.png" alt="ie screenshot" />
@@ -64,10 +64,10 @@
     ${_("click and drag")}&nbsp;
     %for type in thing.buttons:
     <a style="padding: 0 3px 0 3px" href="${dockletStr(type, 'safari')}" onclick="dragme(); return false">
-      <img alt="${type}" src="/static/${type}_safari.png" />
+      <span class="bookmarklet">${type}</span>&nbsp;
     </a>
     %endfor
-    ${_("to your toolbar.")}
+    ${_("to your bookmark bar.")}
   </p>
   <p>
     <img border="0" src="/static/safari.png" alt="safari screenshot"/>
